# job-agent

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  USAGE.md  api_responses.json  config.py  justfile  main.py  page_dump.html  pyproject.toml  serve.py
agents/: match_agent.py  resume_selector.py  search_agent.py
api/: database.py  main.py  models.py
api/repositories/: application_repo.py  job_repo.py  run_repo.py
api/routers/: applications.py  jobs.py  runs.py
api/services/: application_service.py  job_service.py  run_service.py
data/: companies.json  parsed_resume.json  preferences.yaml
docs/: scoring-pipeline.md
docs/superpowers/plans/: 2026-06-29-jobs-grouped-by-run.md
docs/superpowers/specs/: 2026-06-24-rejected-jobs-html-page-design.md  2026-06-29-jobs-grouped-by-run-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: JobCard.jsx  JobDetail.jsx  RunGroup.jsx  StatusBadge.jsx  StatusDropdown.jsx  TabBar.jsx
frontend/src/pages/: Jobs.jsx  Runs.jsx  Tracker.jsx
output/: apply_list.csv  apply_list.html  matched_jobs.csv  rejected_jobs.csv
tests/: conftest.py  test_job_repo.py  test_jobs_router.py  test_resume_parser.py  test_scorer.py  test_search_agent.py
utils/: claude_client.py  company_loader.py  docx_builder.py  job_cache.py  resume_parser.py  text_utils.py
